# kongin

./: .gitignore  LICENSE  README.md  README_ES.md  app.py  pyproject.toml  requirements.txt  run.py
kongin/: __init__.py  cli.py  client.py  dspace_client.py  exceptions.py  metadata.py  parser.py  record.py  utils.py
kongin/exporters/: __init__.py  dspace.py
tests/: test_client.py
